--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,20 @@
-## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/db
-spring.datasource.username=user
-spring.datasource.password=password
-## Hibernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-# Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
+## default connection pool
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
+
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://postgres-db:5432/empdb
+spring.datasource.username=postgres01
+spring.datasource.password=takeaway123
+spring.datasource.driverClassName=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.type=debug
+spring.jpa.properties.hibernate.use_sql_comments=true
+
+# ENDPOINTS WEB CONFIGURATION
+management.server.port=9000
+management.endpoints.web.exposure.include=health,info,metrics
+server.port=8070
