--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,6 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 # ENDPOINTS WEB CONFIGURATION
 management.server.port=9000
 management.endpoints.web.exposure.include=health,info,metrics
+
 server.port=8070
+server.servlet.context-path=/takeaway
