--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
         <slf4j-api.version>1.7.30</slf4j-api.version>
         <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
         <javax-validation-api.version>2.0.1.Final</javax-validation-api.version>
+        <jackson-datatype-hibernate5.version>2.9.5</jackson-datatype-hibernate5.version>
+        <jackson-datatype-jdk8.version>2.11.3</jackson-datatype-jdk8.version>
     </properties>
 
     <dependencies>
@@ -37,6 +39,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -81,6 +87,12 @@
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
             <version>${javax-validation-api.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jdk8</artifactId>
+            <version>${jackson-datatype-jdk8.version}</version>
         </dependency>
     </dependencies>
 
