--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -8,9 +8,10 @@ spring.datasource.username=postgres01
 spring.datasource.password=takeaway123
 spring.datasource.driverClassName=org.postgresql.Driver
 
+spring.jpa.properties.hibernate.default_schema=emp
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.type=debug
 spring.jpa.properties.hibernate.use_sql_comments=true
 
