--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -15,3 +15,9 @@ spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.type=info
 spring.jpa.properties.hibernate.use_sql_comments=false
 spring.jpa.properties.hibernate.generate_statistics=false
+
+# ENDPOINTS WEB CONFIGURATION
+management.server.port=9000
+management.endpoints.web.exposure.include=health,info,metrics
+
+server.servlet.context-path=/takeaway
