--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -49,31 +49,46 @@ services:
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://cp-kafka-1:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 2
 
-  cp-kafka-2:
-    image: confluentinc/cp-kafka:5.3.1
-    container_name: cp-kafka-2
-    depends_on:
-      - cp-zookeeper
-    ports:
-      - 9093:9093
-    environment:
-      KAFKA_BROKER_ID: 2
-      KAFKA_ZOOKEEPER_CONNECT: cp-zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://cp-kafka-2:9093
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 2
-
   cp-schema-registry:
     image: confluentinc/cp-schema-registry:5.3.1
     container_name: cp-schema-registry
     depends_on:
       - cp-zookeeper
       - cp-kafka-1
-      - cp-kafka-2
     ports:
       - 8081:8081
     environment:
       SCHEMA_REGISTRY_HOST_NAME: schema-registry
       SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: cp-zookeeper:2181
+
+  cp-schema-registry-ui:
+    image: landoop/schema-registry-ui:0.9.5
+    container_name: cp-schema-registry-ui
+    depends_on:
+      - cp-schema-registry
+    ports:
+      - 8060:8000
+    links:
+      - "cp-schema-registry:cp-schema-registry"
+    environment:
+      SCHEMAREGISTRY_URL: http://cp-schema-registry:8081/
+      ALLOW_GLOBAL: 1
+      ALLOW_TRANSITIVE: 1
+      ALLOW_DELETION: 1
+      PROXY: 1
+
+  cp-kafka-rest:
+    image: confluentinc/cp-kafka-rest:5.3.1
+    container_name: cp-kafka-rest
+    ports:
+      - "8082:8082"
+    depends_on:
+      - cp-schema-registry
+    environment:
+      KAFKA_REST_ZOOKEEPER_CONNECT: cp-zookeeper:2181
+      KAFKA_REST_SCHEMA_REGISTRY_URL: cp-schema-registry:8081
+      KAFKA_REST_HOST_NAME: cp-kafka-rest
+      KAFKA_REST_LISTENERS: http://cp-kafka-rest:8082
 
 networks:
   default:
