--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
     <description>The employee service is responsible for managing the employees data</description>
 
     <properties>
+        <confluent.maven.repo>http://packages.confluent.io/maven/</confluent.maven.repo>
+
         <java.version>1.8</java.version>
         <lombok.version>1.18.0</lombok.version>
         <jacoco.version>0.8.0</jacoco.version>
@@ -25,6 +27,9 @@
         <javax-validation-api.version>2.0.1.Final</javax-validation-api.version>
         <jackson-datatype-jdk8.version>2.11.3</jackson-datatype-jdk8.version>
         <mockito.version>2.23.4</mockito.version>
+        <avro.version>1.8.2</avro.version>
+        <kafka-avro-serializer.version>5.2.2</kafka-avro-serializer.version>
+        <spring-kafka.version>2.5.7.RELEASE</spring-kafka.version>
     </properties>
 
     <dependencies>
@@ -43,6 +48,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+            <version>${spring-kafka.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -100,9 +110,36 @@
             <artifactId>mockito-core</artifactId>
             <version>${mockito.version}</version>
         </dependency>
+
+        <!-- avro -->
+        <dependency>
+            <groupId>org.apache.avro</groupId>
+            <artifactId>avro</artifactId>
+            <version>${avro.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.confluent</groupId>
+            <artifactId>kafka-avro-serializer</artifactId>
+            <version>${kafka-avro-serializer.version}</version>
+        </dependency>
     </dependencies>
 
+    <repositories>
+        <repository>
+            <id>confluent</id>
+            <url>${confluent.maven.repo}</url>
+        </repository>
+    </repositories>
+
     <build>
+        <resources>
+            <resource>
+                <directory>${project.basedir}/target/generated-sources/avro/</directory>
+            </resource>
+            <resource>
+                <directory>${project.basedir}/src/main/resources</directory>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -135,6 +172,27 @@
                         <goals>
                             <goal>report</goal>
                         </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.avro</groupId>
+                <artifactId>avro-maven-plugin</artifactId>
+                <version>${avro.version}</version>
+                <executions>
+                    <execution>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>schema</goal>
+                            <goal>protocol</goal>
+                            <goal>idl-protocol</goal>
+                        </goals>
+                        <configuration>
+                            <sourceDirectory>${project.basedir}/src/main/avro/</sourceDirectory>
+                            <createSetters>false</createSetters>
+                            <enableDecimalLogicalType>true</enableDecimalLogicalType>
+                            <fieldVisibility>private</fieldVisibility>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
