--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -21,3 +21,7 @@ management.endpoints.web.exposure.include=health,info,metrics
 
 server.port=8070
 server.servlet.context-path=/takeaway
+
+# Kafka Properties
+kafka.producer.bootstrap.servers=cp-kafka-1:9092
+kafka.producer.employee.topic=takeway_employee_updates
