--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,8 @@
         <avro.version>1.8.2</avro.version>
         <kafka-avro-serializer.version>5.2.2</kafka-avro-serializer.version>
         <spring-kafka.version>2.5.7.RELEASE</spring-kafka.version>
+        <base.package>com/takeaway/challenge</base.package>
+        <spring-mock-mvc.version>3.3.0</spring-mock-mvc.version>
     </properties>
 
     <dependencies>
@@ -111,6 +113,13 @@
             <version>${mockito.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>spring-mock-mvc</artifactId>
+            <version>${spring-mock-mvc.version}</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- avro -->
         <dependency>
             <groupId>org.apache.avro</groupId>
@@ -160,6 +169,20 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>${jacoco.version}</version>
+                <configuration>
+                    <excludes>
+                        <exclude>${base.package}/constant/*</exclude>
+                        <exclude>${base.package}/context/*</exclude>
+                        <exclude>${base.package}/dto/**/*</exclude>
+                        <exclude>${base.package}/model/*</exclude>
+                        <exclude>${base.package}/repository/*</exclude>
+                        <exclude>${base.package}/EmployeeServiceApp*</exclude>
+
+                        <!--Auto generated avro classes-->
+                        <exclude>${base.package}/EmployeeEvent*</exclude>
+
+                    </excludes>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
