--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -25,3 +25,11 @@ server.servlet.context-path=/takeaway
 # Kafka Properties
 kafka.producer.bootstrap.servers=cp-kafka-1:9092
 kafka.producer.employee.topic=takeway_employee_updates
+
+# Flyway Properties
+
+flyway.url=${spring.datasource.url}
+flyway.user=${spring.datasource.username}
+flyway.password=${spring.datasource.password}
+flyway.schemas=emp
+flyway.table=flyway_schema_history
