--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -5,7 +5,7 @@ spring.datasource.hikari.maximumPoolSize=5
 ## PostgreSQL
 spring.datasource.url=jdbc:postgresql://postgres-db:5432/empdb
 spring.datasource.username=postgres01
-spring.datasource.password=takeaway123
+spring.datasource.password=password123
 spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.jpa.properties.hibernate.default_schema=emp
