--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -26,6 +26,12 @@ server.servlet.context-path=/takeaway
 kafka.producer.bootstrap.servers=cp-kafka-1:9092
 kafka.producer.employee.topic=takeway_employee_updates
 
+kafka.producer.schema.registry.url=http://cp-schema-registry:8081
+kafka.producer.auto.register.schemas=false
+kafka.producer.key.subject.name.strategy=io.confluent.kafka.serializers.subject.TopicRecordNameStrategy
+kafka.producer.value.subject.name.strategy=io.confluent.kafka.serializers.subject.TopicRecordNameStrategy
+kafka.producer.specific.avro.reader=true
+
 # Flyway Properties
 
 flyway.url=${spring.datasource.url}
