Renaming the package and updated the documentation

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -20,11 +20,11 @@ management.server.port=9000
 management.endpoints.web.exposure.include=health,info,metrics
 
 server.port=8070
-server.servlet.context-path=/takeaway
+server.servlet.context-path=/sandemo
 
 # Kafka Properties
 kafka.producer.bootstrap.servers=cp-kafka-1:9092
-kafka.producer.employee.topic=takeway_employee_updates
+kafka.producer.employee.topic=employee_updates
 
 kafka.producer.schema.registry.url=http://cp-schema-registry:8081
 kafka.producer.auto.register.schemas=false
