--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -20,7 +20,7 @@ spring.jpa.properties.hibernate.generate_statistics=false
 management.server.port=9000
 management.endpoints.web.exposure.include=health,info,metrics
 
-server.servlet.context-path=/takeaway
+server.servlet.context-path=/sandemo
 
 kafka.producer.bootstrap.servers=
-kafka.producer.employee.topic=takeway_employee_updates
+kafka.producer.employee.topic=employee_updates
